tests/sumo/tls/NEMA/errors/1_ignore/output.sumo
Loading net-file from 'net.net.xml' ... done (3ms).
Loading additional-files from 'input_additional.add.xml' ... 
done (1ms).
Loading additional-files from 'input_additional2.add.xml' ... done (1ms).
Loading done.
Simulation version v1_14_1+0331-153d228 started with time: 0.00
Simulation ended at time: 500.00
Reason: The final simulation step has been reached.
Performance: 
 Duration: 0.22s
 Real time factor: 2252.25
 UPS: 138752.252252
Vehicles: 
 Inserted: 422 (Loaded: 423)
 Running: 91
 Waiting: 1
Statistics (avg of 331):
 RouteLength: 350.68
 Speed: 7.69
 Duration: 65.67
 WaitingTime: 29.57
 TimeLoss: 47.15
 DepartDelay: 0.70

